Added front-end logic for individual foods, associating them to categories / dietary conditions. Also added CSS styles to the welcome screen, to make it look closer to the Figma prototype design.

--- a/src/components/main/Welcome.css
+++ b/src/components/main/Welcome.css
@@ -10,3 +10,29 @@
     width: 100%;
     margin: auto;
 }
+
+.swiper-slide {
+    min-width: 180px;
+    overflow: auto;
+}
+
+label {
+    width: 125px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+}
+
+.checkboxgroup {
+    height: 48vh;
+    overflow: auto;
+}
+
+.swiper-pagination-bullet {
+    width: 16px;
+    height: 16px;
+}
+
+.swiper-pagination-bullet-active {
+    background: #E83737;
+}
