Created FoodContext and moved food profile logic out of Welcome.js into a global state.

--- a/src/components/main/Welcome.css
+++ b/src/components/main/Welcome.css
@@ -17,14 +17,12 @@
 }
 
 label {
-    width: 125px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-
+    width: 20vw;
+    min-width: 65px;
+    max-width: 125px;
 }
 
 .checkboxgroup {
-    height: 48vh;
     overflow: auto;
 }
 
