Added data persistence to FoodContext (localstorage) to reduce number of GET requests from Firestore (save-money). Also improved Register.js to check passwords match first before asking for ReCaptcha.

--- a/src/components/authentication/Login.css
+++ b/src/components/authentication/Login.css
@@ -14,3 +14,9 @@
 .firebaseui-container {
     margin-right: 0px !important;
 }
+
+.rc-anchor-pt {
+    position: relative !important;
+    left: 16px;
+    width: 100%;
+}
