--- a/src/components/authentication/Login.css
+++ b/src/components/authentication/Login.css
@@ -1,22 +1,25 @@
 @media (min-width: 560px) and (min-height: 520px) {
-    .col-sm-6 {
-         max-width: 100% !important;
-    }
-
+  .col-sm-6 {
+    max-width: 100% !important;
+  }
 }
 
 .btn-group {
-    display: flex !important;
-    justify-content: center;
-    align-items: center;
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
 }
 
 .firebaseui-container {
-    margin-right: 0px !important;
+  margin-right: 0px !important;
 }
 
 .rc-anchor-pt {
-    position: relative !important;
-    left: 16px;
-    width: 100%;
+  position: relative !important;
+  left: 16px;
+  width: 100%;
+}
+
+label {
+  white-space: nowrap;
 }
