Added 'my' prefixes to /favourites and /profile endpoints to make it more clear to users. Also fixed an annoying routing bug where refreshing the app redirects authenticated users to the login screen. Also updated CSS styles of dietary tags so users can read the full name.

--- a/src/context/FoodContext.css
+++ b/src/context/FoodContext.css
@@ -1,21 +1,18 @@
 .MuiTableCell-root {
-    padding: 5px !important;
+  padding: 5px !important;
 }
 
 .MuiAccordion-root {
-    box-shadow: none !important;
+  box-shadow: none !important;
 }
 
 .Mui-disabled {
-    background-color: unset !important;
+  background-color: unset !important;
 }
 
 label.MuiFormControlLabel-root {
-    max-width: 225px;
-    width: 100%;
-}
-
-.MuiFormControlLabel-label {
-    text-overflow: ellipsis;
-    overflow: hidden;
+  max-width: 225px;
+  width: 100%;
+  text-align: left;
+  white-space: normal;
 }
