Removed the My Food Profile section and updated text in the sign up message.

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -45,7 +45,7 @@ body {
   overflow-x: hidden; /* Hide horizontal scrollbar */
 }
 
-#register-captcha > div > div > div {
+.centercaptcha > div > div > div {
   margin: 0 auto;
 }
 
