--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,3 +1,9 @@
+#navbar {
+  background-color: white;
+  color: black;
+  box-shadow: 0px 0px 0px 0px;
+}
+
 @media (max-width: 350px) {
   #captcha {
     transform: scale(0.75);
